--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
 }
 
 body{
-    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -17,9 +16,10 @@ body{
 
 .container{
     background: #F3F6FF;
-    width: 1200px;
+    width: 100%;
+    max-width: 1440px;
+    margin: 0 auto;
     padding: 40px;
-    margin-top: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
